<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable name="vm" type="com.ashleyfigueira.stackoverflow.userdetail.UserDetailsViewModel"/>
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:background="@drawable/bg_gradient_left_right">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            app:elevation="0dp">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsingToolbar"
                android:layout_width="match_parent"
                android:layout_height="112dp"
                app:expandedTitleMarginBottom="16dp"
                app:expandedTitleMarginStart="16dp"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?android:attr/actionBarSize"
                    android:background="@android:color/transparent"
                    app:layout_collapseMode="pin"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Dark"
                    app:title="User Details" />
            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            app:cardElevation="2dp"
            app:cardCornerRadius="6dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/userProfileImage"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:layout_marginStart="16dp"
                    android:importantForAccessibility="no"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    tools:src="@drawable/ic_empty_set"/>

                <TextView
                    android:id="@+id/userName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:layout_marginTop="12dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    tools:text="Ashley Figueira"
                    app:layout_constraintStart_toEndOf="@id/userProfileImage"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <TextView
                    android:id="@+id/reputationLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:layout_marginStart="8dp"
                    android:text="@string/reputation"
                    app:layout_constraintStart_toEndOf="@id/userProfileImage"
                    app:layout_constraintTop_toBottomOf="@id/userName"/>

                <TextView
                    android:id="@+id/reputation"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:layout_marginStart="8dp"
                    tools:text="123456"
                    app:layout_constraintStart_toEndOf="@id/reputationLabel"
                    app:layout_constraintTop_toBottomOf="@id/userName"/>

                <TextView
                    android:id="@+id/idLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:layout_marginStart="8dp"
                    android:text="@string/id"
                    app:layout_constraintStart_toEndOf="@id/userProfileImage"
                    app:layout_constraintTop_toBottomOf="@id/reputationLabel"/>

                <TextView
                    android:id="@+id/idNumber"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:layout_marginStart="8dp"
                    tools:text="123456"
                    app:layout_constraintStart_toEndOf="@id/idLabel"
                    app:layout_constraintTop_toBottomOf="@id/reputationLabel"/>

                <TextView
                    android:id="@+id/creationDateLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:layout_marginStart="8dp"
                    android:text="@string/creation_date"
                    app:layout_constraintStart_toEndOf="@id/userProfileImage"
                    app:layout_constraintTop_toBottomOf="@id/idLabel"/>

                <TextView
                    android:id="@+id/creationDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    tools:text="20 OCT 2019"
                    app:layout_constraintStart_toEndOf="@id/creationDateLabel"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/idLabel"/>

                <TextView
                    android:id="@+id/locationLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:layout_marginStart="8dp"
                    android:text="@string/location"
                    app:layout_constraintStart_toEndOf="@id/userProfileImage"
                    app:layout_constraintTop_toBottomOf="@id/creationDate"/>

                <TextView
                    android:id="@+id/location"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    tools:text="London"
                    app:layout_constraintStart_toEndOf="@id/locationLabel"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/creationDate"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/followButton"
                    style="@style/Widget.MaterialComponents.Button"
                    android:text="@string/follow"
                    android:layout_width="wrap_content"
                    android:layout_height="52dp"
                    app:layout_constraintTop_toBottomOf="@id/location"
                    app:layout_constraintStart_toEndOf="@id/userProfileImage"
                    app:layout_constraintEnd_toStartOf="@id/blockButton"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/blockButton"
                    style="@style/Widget.MaterialComponents.Button"
                    android:text="@string/block"
                    android:layout_width="wrap_content"
                    android:layout_height="52dp"
                    app:layout_constraintTop_toBottomOf="@id/location"
                    app:layout_constraintStart_toEndOf="@id/followButton"
                    app:layout_constraintEnd_toEndOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
